tests/ui/errors/snapshots/display_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[display]` not on a struct or enum
   ╭─[test.lis:3:3]
 2 │ struct Config {
 3 │   #[display]
   ·   ─────┬────
   ·        ╰── no fields or variants to print here
 4 │   value: int,
   ╰────
  help: Only a struct or enum can be marked `#[display]` · code: [attribute.display_not_a_struct_or_enum]
