tests/ui/errors/snapshots/display_with_arguments.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[display]` takes no arguments
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[display(foo)]
   · ───────┬───────
   ·        ╰── remove the arguments
 3 │ struct Point { x: int, y: int }
   ╰────
  help: Write `#[display]` with no arguments · code: [attribute.display_with_arguments]
