tests/ui/errors/snapshots/displayable_on_alias_pointer_newtype.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[displayable]` on a pointer-backed newtype
   ╭─[test.lis:4:1]
 3 │ 
 4 │ #[displayable]
   · ───────┬──────
   ·        ╰── a `Ref` has no display form
 5 │ struct Handle(R)
   ╰────
  help: Give the type named fields, or drop `#[displayable]` · code: [attribute.displayable_on_pointer_newtype]
