tests/ui/errors/snapshots/displayable_on_impl_method.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[displayable]` not on a struct or enum
   ╭─[test.lis:5:3]
 4 │ impl Widget {
 5 │   #[displayable]
   ·   ───────┬──────
   ·          ╰── not on a struct or enum
 6 │   fn build() -> int {
   ╰────
  help: Only a struct or enum can be marked `#[displayable]` · code: [attribute.displayable_not_a_struct_or_enum]
