tests/ui/errors/snapshots/displayable_on_pointer_newtype.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[displayable]` on a pointer-backed newtype
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[displayable]
   · ───────┬──────
   ·        ╰── a `Ref` has no display form
 3 │ struct Handle(Ref<int>)
   ╰────
  help: Give the type named fields, or drop `#[displayable]` · code: [attribute.displayable_on_pointer_newtype]
