tests/ui/errors/snapshots/displayable_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[displayable]` not on a struct or enum
   ╭─[test.lis:3:3]
 2 │ struct Config {
 3 │   #[displayable]
   ·   ───────┬──────
   ·          ╰── not on a struct or enum
 4 │   value: int,
   ╰────
  help: Only a struct or enum can be marked `#[displayable]` · code: [attribute.displayable_not_a_struct_or_enum]
