tests/ui/errors/snapshots/displayable_with_specialized_to_string.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[displayable]` conflicts with your `to_string`
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[displayable]
   · ───────┬──────
   ·        ╰── adds a `to_string` of its own
 3 │ struct Box<T> {
   ╰────
  help: `#[displayable]` needs a plain `fn to_string(self) -> string` on the type. Write `to_string` in that form, or remove `#[displayable]` · code: [attribute.displayable_specialized_to_string]
