tests/ui/errors/snapshots/duplicate_default_on_one_variant.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate default variants
   ╭─[test.lis:3:3]
 2 │ enum TwiceOnOne {
 3 │   #[default]
   ·   ─────┬────
   ·        ╰── first
 4 │   #[default]
   ·   ─────┬────
   ·        ╰── second
 5 │   A,
   ╰────
  help: Mark a single variant with `#[default]` · code: [attribute.duplicate_default_variant]
